Se agregó un logo, un menú de navegación y estilos al contenido de header

--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Caragro | Arroz</title>
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
-  
-    
-    <div class="header">
-      <!-- TODO: Navbar -->
-      
-    </div>
 
-    <section>
-      <!-- TODO: Some products -->
-    </section>
 
-    <footer>
-      <!-- Contact and social media -->
-    </footer>
+  <div class="header">
+    <figure id="logo">
+      <img src="./css/images/caragro-logo.jpg" alt="caragro-logo" width="200px" height="80px">
+    </figure>
+    <nav class="menu">
+      <ol>
+        <ul><a href="#Bienvenida">Bienvenido a Caragro</a></ul>
+        <ul> <a href="#Productos">Productos</a></ul>
+        <ul><a href="#Trabajo">Trabaja con nosotros</a></ul>
+      </ol>
+    </nav>
 
-  
+
+  </div>
+
+  <section>
+    <!-- TODO: Some products -->
+  </section>
+
+  <footer>
+    <!-- Contact and social media -->
+  </footer>
+
+
 </body>
+
 </html>
