--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="header">
     <figure id="logo">
-      <img src="./css/images/caragro-logo.jpg" alt="caragro-logo" width="200px" height="80px">
+      <img src="./images/caragro-logo.jpg" alt="caragro-logo" width="200px" height="80px">
     </figure>
     <nav class="menu">
       <ol>
